fixed blurry photos
simplified animaations

--- a/css/app.css
+++ b/css/app.css
@@ -55,6 +55,63 @@
 	background-color:red;
 }
 
+/*Right pointing*/
+.triangle-right {
+	/*float:left;*/
+    margin:0.5%;
+    width: 0;
+    height: 0;
+    padding-top: 9.6%;
+    padding-bottom: 5%;
+    padding-left: 5%;
+    overflow: hidden;
+    display:inline-block;
+    transition:ease-in-out .2s;
+}
+.triangle-right:after {
+    content: "";
+    display: block;
+    width: 0;
+    height: 0;
+    margin-top:-500px;
+    margin-left: -500px;
+    
+    border-top: 500px solid transparent;
+    border-bottom: 500px solid transparent;
+    border-left: 500px solid rgb(233, 141, 112);
+}
+
+.triangle-right:active{
+    transform:rotate(90deg) translateX(.3em);
+}
+.triangle-right:focuss{
+    transform:rotate(90deg) translateX(.3em);
+}
+
+/*Down pointing*/
+.triangle-down {
+	float:left;
+    margin:0.5%;
+    width: 0;
+    height: 0;
+    padding-top: 5%;
+    padding-bottom: 5%;
+    padding-left: 5%;
+    overflow: hidden;
+    transform:rotate(90deg);
+}
+.triangle-down:after {
+    content: "";
+    display: block;
+    width: 0;
+    height: 0;
+    margin-left:-500px;
+    margin-top:-500px;
+    
+    border-left: 500px solid transparent;
+    border-right: 500px solid transparent;
+    border-top: 500px solid rgb(233, 141, 112);
+}
 
 /********************
 		NAVBAR
@@ -234,21 +291,10 @@ a:active{
 	border-width:3px;
 
 	transition: ease-in-out, .1s;
-
-	filter: blur(1px);
-	-webkit-filter: blur(1px);
-	-moz-filter: blur(1px);
-	-o-filter: blur(1px);
-	-ms-filter: blur(1px);
 }
 
 .portfolio-img:hover{
-	filter: blur(0px);
-	-webkit-filter: blur(0px);
-	-moz-filter: blur(0px);
-	-o-filter: blur(0px);
-	-ms-filter: blur(0px);
-	transform:scale(1.1,1.1);
+	transform:translateY(-.2em);
 	/*border-radius:20%;*/
 }
 
